Начало проекта, вёрстка footer

--- a/index.html
+++ b/index.html
@@ -2,12 +2,45 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="normalize.css"> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Проектная работа №1 на Яндекс.Практикуме">
+  <meta name="keywords" content="Проект, Практика, Яндекс.Практикум">
+  <meta name="author" content="Андрей Кизилов">
+  <link rel="stylesheet" href="style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
   <div class="page">
+    <header class="header">
+      <div class="logo header__logo"></div>
+      <div class="title header__title"></div>
+      <div class="subtitle header__subtitle"></div>
+      <div class="link header__link"></div>
+      <div class="main-illustration header__main-illustration"></div>
+      <div class="square-pic header__square-pic"></div>
+    </header>
 
+    
+    <main class="content">
+      <section class="description">
+
+      </section>
+      <section class="digits">
+
+      </section>
+      <section class="feynman">
+
+      </section>
+      <section class="kaufman">
+
+      </section>
+    </main>
+
+
+    <footer class="footer">
+
+    </footer>
   </div>
 </body>
 </html>
