--- a/index.html
+++ b/index.html
@@ -2,24 +2,24 @@
 <html lang="ru">
   <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="normalize.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Проектная работа №1 на Яндекс.Практикуме">
     <meta name="keywords" content="Проект, Практика, Яндекс.Практикум">
     <meta name="author" content="Андрей Кизилов">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <title>Научиться учиться</title>
   </head>
   <body>
     <div class="page">
       <header class="header">
         <img class="logo header__logo" src="./images/logo_place_header.svg" alt="Логотип Яндекс">
-        <h1 class="title header__title">Научиться учиться</h1>
-        <p class="subtitle header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-          <a class="link header__link">Узнать &rarr;</a>
+        <h1 class="header__title">Научиться учиться</h1>
+        <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
+          <a class="link">Узнать &rarr;</a>
         </p>
-        <img class="main-illustration header__main-illustration" src="./images/header-image.png" alt="Грустный мальчик">
-        <div class="square-pic header__square-pic"></div>
+        <img class="header__main-illustration" src="./images/header-image.png" alt="Грустный мальчик">
+        <div class="header__square-pic"></div>
       </header>
 
       <main class="content">
