--- a/index.html
+++ b/index.html
@@ -73,8 +73,15 @@
             </ul>
           </div>
         </section>
-        <section class="feynman"></section>
-        <section class="kaufman"></section>
+        <section class="feynman">
+            <h2 class="feynman_title">Метод Фейнмана</h2>
+            <h3 class="feynman_subtitle">Выучить и не забыть.</h3>
+            <a class="feynman_link">Подробнее &rarr;</a>
+            <img class="feynman_pic" src="./images/feynman.png" alt="Фейнман фото">
+        </section>
+        <section class="kaufman">
+          
+        </section>
       </main>
 
       <footer class="footer"></footer>
