--- a/index.html
+++ b/index.html
@@ -80,11 +80,78 @@
             <img class="feynman_pic" src="./images/feynman.png" alt="Фейнман фото">
         </section>
         <section class="kaufman">
-          
+          <h2 class="section-title_theme_dark">Принципы обучения</h2>
+          <h3 class="section-subtitle_theme_dark">от Джоша Кауфмана</h3>
+          <div class="table__theme_dark">
+            <ul class="table__cell_theme_dark">
+              <li class="table__heading_theme_dark">1</li>
+              <li class="table__text_theme_dark">Выберите привлекательный проект.</li>
+            </ul>
+            <ul class="table__cell_theme_dark">
+              <li class="table__heading_theme_dark">2</li>
+              <li class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</li>
+            </ul>
+            <ul class="table__cell_theme_dark">
+              <li class="table__heading_theme_dark">3</li>
+              <li class="table__text_theme_dark">Определите целевой уровень мастерства.</li>
+            </ul>
+            <ul class="table__cell_theme_dark">
+              <li class="table__heading_theme_dark">4</li>
+              <li class="table__text_theme_dark">Разбейте навык на элементы.</li>
+            </ul>
+            <ul class="table__cell_theme_dark">
+              <li class="table__heading_theme_dark">5</li>
+              <li class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</li>
+            </ul>
+            <ul class="table__cell_theme_dark">
+              <li class="table__heading_theme_dark">6</li>
+              <li class="table__text_theme_dark">Устраните препятствия для занятий.</li>
+            </ul>
+            <ul class="table__cell_theme_dark">
+              <li class="table__heading_theme_dark">7</li>
+              <li class="table__text_theme_dark">Выделите специальное время для занятий.</li>
+            </ul>
+            <ul class="table__cell_theme_dark">
+              <li class="table__heading_theme_dark">8</li>
+              <li class="table__text_theme_dark">Создайте быстрые петли обратной связи.</li>
+            </ul>
+            <ul class="table__cell_theme_dark">
+              <li class="table__heading_theme_dark">9</li>
+              <li class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</li>
+            </ul>
+            <ul class="table__cell_theme_dark">
+              <li class="table__heading_theme_dark">10</li>
+              <li class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</li>
+            </ul>
+          </div>
+          <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Декоративный треугольник">
         </section>
       </main>
 
-      <footer class="footer"></footer>
+      <footer class="footer">
+        <div class="footer__columns">
+          <div class="footer__column_content_copyright">
+            <img class="logo logo__place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс">
+            <p class="footer__author">	&copy; Андрей Кизилов</p>
+          </div>
+          <nav class="footer__column_content_info">
+            <h4 class="footer__column-heading">О практикуме</h4>
+            <ul class="footer__columnn-links">
+              <li class="footer__columnn-link">Главная</li>
+              <li class="footer__columnn-link">Концепция</li>
+              <li class="footer__columnn-link">Наставники</li>
+            </ul>
+          </nav>
+          <nav class="footer__column_content_social">
+            <h4 class="footer__column-heading">Соцсети</h4>
+            <ul class="footer__columnn-links">
+              <li class="footer__columnn-link"><img class="footer__social-icon">YouTube</li>
+              <li class="footer__columnn-link"><img class="footer__social-icon">ВКонтакте</li>
+              <li class="footer__columnn-link"><img class="footer__social-icon">TikTok</li>
+            </ul>
+          </nav>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
