--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
         <img class="header__main-illustration" src="./images/header-image.png" alt="Грустный мальчик">
         <div class="header__square-pic"></div>
       </header>
-
       <main class="content">
         <section class="description">
           <div class="two-columns">
@@ -127,7 +126,6 @@
           <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Декоративный треугольник">
         </section>
       </main>
-
       <footer class="footer">
         <div class="footer__columns">
           <div class="footer__column_content_copyright">
@@ -137,17 +135,20 @@
           <nav class="footer__column_content_info">
             <h4 class="footer__column-heading">О практикуме</h4>
             <ul class="footer__columnn-links">
-              <li class="footer__columnn-link">Главная</li>
-              <li class="footer__columnn-link">Концепция</li>
-              <li class="footer__columnn-link">Наставники</li>
+              <li><a href="#" class="footer__columnn-link">Главная</a></li>
+              <li><a href="#" class="footer__columnn-link">Концепция</a></li>
+              <li><a href="#" class="footer__columnn-link">Наставники</a></li>
             </ul>
           </nav>
           <nav class="footer__column_content_social">
             <h4 class="footer__column-heading">Соцсети</h4>
             <ul class="footer__columnn-links">
-              <li class="footer__columnn-link"><img class="footer__social-icon">YouTube</li>
-              <li class="footer__columnn-link"><img class="footer__social-icon">ВКонтакте</li>
-              <li class="footer__columnn-link"><img class="footer__social-icon">TikTok</li>
+              <li><a href="#" class="footer__columnn-link">
+                <img class="footer__social-icon">YouTube</li>
+              <li><a href="#" class="footer__columnn-link">
+                <img class="footer__social-icon">ВКонтакте</li>
+              <li><a href="#" class="footer__columnn-link">
+                <img class="footer__social-icon">TikTok</li>
             </ul>
           </nav>
         </div>
