--- a/index.html
+++ b/index.html
@@ -144,11 +144,11 @@
             <h4 class="footer__column-heading">Соцсети</h4>
             <ul class="footer__columnn-links">
               <li><a href="#" class="footer__columnn-link">
-                <img class="footer__social-icon">YouTube</li>
+                <img class="footer__social-icon" src="./images/youtube-icon.svg" alt="Ютуб">YouTube</a></li>
               <li><a href="#" class="footer__columnn-link">
-                <img class="footer__social-icon">ВКонтакте</li>
+                <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">ВКонтакте</a></li>
               <li><a href="#" class="footer__columnn-link">
-                <img class="footer__social-icon">TikTok</li>
+                <img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="ТикТок">TikTok</a></li>
             </ul>
           </nav>
         </div>
