--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <img class="logo logo__place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс">
             <p class="footer__author">	&copy; Андрей Кизилов</p>
           </div>
-          <nav class="footer__column_content_info">
+          <nav>
             <h4 class="footer__column-heading">О практикуме</h4>
             <ul class="footer__columnn-links">
               <li><a href="#" class="footer__columnn-link">Главная</a></li>
@@ -140,7 +140,7 @@
               <li><a href="#" class="footer__columnn-link">Наставники</a></li>
             </ul>
           </nav>
-          <nav class="footer__column_content_social">
+          <nav>
             <h4 class="footer__column-heading">Соцсети</h4>
             <ul class="footer__columnn-links">
               <li><a href="#" class="footer__columnn-link">
