--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   <body>
     <div class="page">
       <header class="header">
-        <img class="logo header__logo" src="./images/logo_place_header.svg" alt="Логотип Яндекс">
+        <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Логотип Яндекс">
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни?
-          <a class="link">Узнать &rarr;</a>
+          <a class="header__link">Узнать &rarr;</a>
         </p>
         <img class="header__main-illustration" src="./images/header-image.png" alt="Грустный мальчик">
         <div class="header__square-pic"></div>
@@ -24,53 +24,53 @@
       <main class="content">
         <section class="description">
           <div class="two-columns">
-            <h2 class="two-columns_brief">Главные проблемы в обучении</h2>
+            <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
             <div class="two-columns_main-text">
-              <p class="two-columns_paragraf">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
-              <p class="two-columns_paragraf"><span class="two-columns_span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
-              <p class="two-columns_paragraf">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+              <p class="two-columns_paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+              <p class="two-columns_paragraph"><span class="two-columns_span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+              <p class="two-columns_paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
             </div>
           </div>
         </section>
         <section class="digits">
           <h2 class="section-title">Цифры и факты</h2>
-          <h3 class="section-subtitle">Про учёбу и мозг</h3>
-          <div class="table">
-            <ul class="table_cell">
-              <li class="table_heading">86 миллиардов</li>
-              <li class="table_text">Число нейронов в мозге человека</li>
-            </ul>
-            <ul class="table_cell">
-              <li class="table_heading">2.1 миллиарда</li>
-              <li class="table_text">Число нуждающихся в повышении квалификации</li>
-              <li class="table_text">Всемирный Банк, 2017</li>
-            </ul>
-            <ul class="table_cell">
-              <li class="table_heading">1000 терабайт</li>
-              <li class="table_text">Объём памяти человека</li>
-            </ul>
-            <ul class="table_cell">
-              <li class="table_heading">500 триллионов</li>
-              <li class="table_text">Число ответственных за обучение нервных синапсов у взрослого человека</li>
-            </ul>
-            <ul class="table_cell">
-              <li class="table_heading">420 миллионов</li>
-              <li class="table_text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</li>
-              <li class="table_text">Всемирный Банк, 2017</li>
-            </ul>
-            <ul class="table_cell">
-              <li class="table_heading">17–20 лет</li>
-              <li class="table_text">Пик обучаемости</li>
-            </ul>
-            <ul class="table_cell">
-              <li class="table_heading">1885 год</li>
-              <li class="table_text">Открытие кривой забывания</li>
-            </ul>
-            <ul class="table_cell">
-              <li class="table_heading">1889 год</li>
-              <li class="table_text">Открытие условного рефлекса</li>
-            </ul>
-          </div>
+          <p class="section-subtitle">Про учёбу и мозг</p>
+          <ul class="table">
+            <li class="table_cell">
+              <p class="table_heading">86 миллиардов</p>
+              <p class="table_text">Число нейронов в мозге человека</p>
+            </li>
+            <li class="table_cell">
+              <p class="table_heading">2.1 миллиарда</p>
+              <p class="table_text">Число нуждающихся в повышении квалификации</p>
+              <p class="table_text">Всемирный Банк, 2017</p>
+            </li>
+            <li class="table_cell">
+              <p class="table_heading">1000 терабайт</p>
+              <p class="table_text">Объём памяти человека</p>
+            </li>
+            <li class="table_cell">
+              <p class="table_heading">500 триллионов</p>
+              <p class="table_text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+            </li>
+            <li class="table_cell">
+              <p class="table_heading">420 миллионов</p>
+              <p class="table_text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+              <p class="table_text">Всемирный Банк, 2017</p>
+            </li>
+            <li class="table_cell">
+              <p class="table_heading">17–20 лет</p>
+              <p class="table_text">Пик обучаемости</p>
+            </li>
+            <li class="table_cell">
+              <p class="table_heading">1885 год</p>
+              <p class="table_text">Открытие кривой забывания</p>
+            </li>
+            <li class="table_cell">
+              <p class="table_heading">1889 год</p>
+              <p class="table_text">Открытие условного рефлекса</p>
+            </li>
+          </ul>
         </section>
         <section class="feynman">
             <h2 class="feynman_title">Метод Фейнмана</h2>
