--- a/index.html
+++ b/index.html
@@ -36,110 +36,110 @@
           <h2 class="section-title">Цифры и факты</h2>
           <p class="section-subtitle">Про учёбу и мозг</p>
           <ul class="table">
-            <li class="table_cell">
-              <p class="table_heading">86 миллиардов</p>
-              <p class="table_text">Число нейронов в мозге человека</p>
+            <li class="table__cell">
+              <h3 class="table__heading">86 миллиардов</h3>
+              <p class="table__text">Число нейронов в мозге человека</p>
             </li>
-            <li class="table_cell">
-              <p class="table_heading">2.1 миллиарда</p>
-              <p class="table_text">Число нуждающихся в повышении квалификации</p>
-              <p class="table_text">Всемирный Банк, 2017</p>
+            <li class="table__cell">
+              <h3 class="table__heading">2.1 миллиарда</h3>
+              <p class="table__text">Число нуждающихся в повышении квалификации</p>
+              <p class="table__text">Всемирный Банк, 2017</p>
             </li>
-            <li class="table_cell">
-              <p class="table_heading">1000 терабайт</p>
-              <p class="table_text">Объём памяти человека</p>
+            <li class="table__cell">
+              <h3 class="table__heading">1000 терабайт</h3>
+              <p class="table__text">Объём памяти человека</p>
             </li>
-            <li class="table_cell">
-              <p class="table_heading">500 триллионов</p>
-              <p class="table_text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+            <li class="table__cell">
+              <h3 class="table__heading">500 триллионов</h3>
+              <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
             </li>
-            <li class="table_cell">
-              <p class="table_heading">420 миллионов</p>
-              <p class="table_text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
-              <p class="table_text">Всемирный Банк, 2017</p>
+            <li class="table__cell">
+              <h3 class="table__heading">420 миллионов</h3>
+              <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+              <p class="table__text">Всемирный Банк, 2017</p>
             </li>
-            <li class="table_cell">
-              <p class="table_heading">17–20 лет</p>
-              <p class="table_text">Пик обучаемости</p>
+            <li class="table__cell">
+              <h3 class="table__heading">17–20 лет</h3>
+              <p class="table__text">Пик обучаемости</p>
             </li>
-            <li class="table_cell">
-              <p class="table_heading">1885 год</p>
-              <p class="table_text">Открытие кривой забывания</p>
+            <li class="table__cell">
+              <h3 class="table__heading">1885 год</h3>
+              <p class="table__text">Открытие кривой забывания</p>
             </li>
-            <li class="table_cell">
-              <p class="table_heading">1889 год</p>
-              <p class="table_text">Открытие условного рефлекса</p>
+            <li class="table__cell">
+              <h3 class="table__heading">1889 год</h3>
+              <p class="table__text">Открытие условного рефлекса</p>
             </li>
           </ul>
         </section>
         <section class="feynman">
-            <h2 class="feynman_title">Метод Фейнмана</h2>
-            <h3 class="feynman_subtitle">Выучить и не забыть.</h3>
-            <a class="feynman_link">Подробнее &rarr;</a>
-            <img class="feynman_pic" src="./images/feynman.png" alt="Фейнман фото">
+            <h2 class="feynman__title">Метод Фейнмана</h2>
+            <p class="feynman__subtitle">Выучить и не забыть.</p>
+            <a class="feynman__link">Подробнее &rarr;</a>
+            <img class="feynman__pic" src="./images/feynman.png" alt="Фейнман фото">
         </section>
         <section class="kaufman">
-          <h2 class="section-title_theme_dark">Принципы обучения</h2>
-          <h3 class="section-subtitle_theme_dark">от Джоша Кауфмана</h3>
-          <div class="table__theme_dark">
-            <ul class="table__cell_theme_dark">
-              <li class="table__heading_theme_dark">1</li>
-              <li class="table__text_theme_dark">Выберите привлекательный проект.</li>
-            </ul>
-            <ul class="table__cell_theme_dark">
-              <li class="table__heading_theme_dark">2</li>
-              <li class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</li>
-            </ul>
-            <ul class="table__cell_theme_dark">
-              <li class="table__heading_theme_dark">3</li>
-              <li class="table__text_theme_dark">Определите целевой уровень мастерства.</li>
-            </ul>
-            <ul class="table__cell_theme_dark">
-              <li class="table__heading_theme_dark">4</li>
-              <li class="table__text_theme_dark">Разбейте навык на элементы.</li>
-            </ul>
-            <ul class="table__cell_theme_dark">
-              <li class="table__heading_theme_dark">5</li>
-              <li class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</li>
-            </ul>
-            <ul class="table__cell_theme_dark">
-              <li class="table__heading_theme_dark">6</li>
-              <li class="table__text_theme_dark">Устраните препятствия для занятий.</li>
-            </ul>
-            <ul class="table__cell_theme_dark">
-              <li class="table__heading_theme_dark">7</li>
-              <li class="table__text_theme_dark">Выделите специальное время для занятий.</li>
-            </ul>
-            <ul class="table__cell_theme_dark">
-              <li class="table__heading_theme_dark">8</li>
-              <li class="table__text_theme_dark">Создайте быстрые петли обратной связи.</li>
-            </ul>
-            <ul class="table__cell_theme_dark">
-              <li class="table__heading_theme_dark">9</li>
-              <li class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</li>
-            </ul>
-            <ul class="table__cell_theme_dark">
-              <li class="table__heading_theme_dark">10</li>
-              <li class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</li>
-            </ul>
-          </div>
-          <img class="kaufman__triangle" src="./images/kaufman-triangle.svg" alt="Декоративный треугольник">
+          <h2 class="section-title__theme_dark">Принципы обучения</h2>
+          <p class="section-subtitle__theme_dark">от Джоша Кауфмана</p>
+          <ul class="table__theme_dark">
+            <li class="table__cell__theme_dark">
+              <h3 class="table__heading_theme_dark">1</h3>
+              <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
+            </li>
+            <li class="table__cell__theme_dark">
+              <h3 class="table__heading_theme_dark">2</h3>
+              <p class="table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+            </li>
+            <li class="table__cell__theme_dark">
+              <h3 class="table__heading_theme_dark">3</h3>
+              <p class="table__text_theme_dark">Определите целевой уровень мастерства.</p>
+            </li>
+            <li class="table__cell__theme_dark">
+              <h3 class="table__heading_theme_dark">4</h3>
+              <p class="table__text_theme_dark">Разбейте навык на элементы.</p>
+            </li>
+            <li class="table__cell__theme_dark">
+              <h3 class="table__heading_theme_dark">5</h3>
+              <p class="table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+            </li>
+            <li class="table__cell__theme_dark">
+              <h3 class="table__heading_theme_dark">6</h3>
+              <p class="table__text_theme_dark">Устраните препятствия для занятий.</p>
+            </li>
+            <li class="table__cell__theme_dark">
+              <h3 class="table__heading_theme_dark">7</h3>
+              <p class="table__text_theme_dark">Выделите специальное время для занятий.</p>
+            </li>
+            <li class="table__cell__theme_dark">
+              <h3 class="table__heading_theme_dark">8</h3>
+              <p class="table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+            </li>
+            <li class="table__cell__theme_dark">
+              <h3 class="table__heading_theme_dark">9</h3>
+              <p class="table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+            </li>
+            <li class="table__cell__theme_dark">
+              <h3 class="table__heading_theme_dark">10</h3>
+              <p class="table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+            </li>
+          </ul>
+          <div class="kaufman__triangle"></div>
         </section>
       </main>
       <footer class="footer">
         <div class="footer__columns">
-          <div class="footer__column_content_copyright">
-            <img class="logo logo__place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс">
+          <div class="footer__column__content_copyright">
+            <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс">
             <p class="footer__author">	&copy; Андрей Кизилов</p>
           </div>
-          <nav>
+          <nav class="footer__column__content_info">
             <h4 class="footer__column-heading">О практикуме</h4>
             <ul class="footer__columnn-links">
               <li><a href="#" class="footer__columnn-link">Главная</a></li>
               <li><a href="#" class="footer__columnn-link">Концепция</a></li>
               <li><a href="#" class="footer__columnn-link">Наставники</a></li>
             </ul>
-          </nav>
+          </nav class="footer__column__content_social">
           <nav>
             <h4 class="footer__column-heading">Соцсети</h4>
             <ul class="footer__columnn-links">
