--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@
               <li><a href="#" class="footer__columnn-link">Концепция</a></li>
               <li><a href="#" class="footer__columnn-link">Наставники</a></li>
             </ul>
-          </nav class="footer__column__content_social">
-          <nav>
+          </nav>
+          <nav class="footer__column__content_social">
             <h4 class="footer__column-heading">Соцсети</h4>
             <ul class="footer__columnn-links">
               <li><a href="#" class="footer__columnn-link">
