--- a/index.html
+++ b/index.html
@@ -79,12 +79,12 @@
             <img class="feynman__pic" src="./images/feynman.png" alt="Фейнман фото">
         </section>
         <section class="kaufman">
-          <h2 class="section-title__theme_dark">Принципы обучения</h2>
-          <p class="section-subtitle__theme_dark">от Джоша Кауфмана</p>
-          <ul class="table__theme_dark">
+          <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+          <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+          <ul class=" table table_theme_dark">
             <li class="table__cell__theme_dark">
-              <h3 class="table__heading_theme_dark">1</h3>
-              <p class="table__text_theme_dark">Выберите привлекательный проект.</p>
+              <h3 class="table__heading table__heading_theme_dark">1</h3>
+              <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
             </li>
             <li class="table__cell__theme_dark">
               <h3 class="table__heading_theme_dark">2</h3>
@@ -128,11 +128,11 @@
       </main>
       <footer class="footer">
         <div class="footer__columns">
-          <div class="footer__column__content_copyright">
+          <div class="footer__column footer__column_content_copyright">
             <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="Логотип Яндекс">
             <p class="footer__author">	&copy; Андрей Кизилов</p>
           </div>
-          <nav class="footer__column__content_info">
+          <nav class="footer__column footer__column_content_info">
             <h4 class="footer__column-heading">О практикуме</h4>
             <ul class="footer__columnn-links">
               <li><a href="#" class="footer__columnn-link">Главная</a></li>
@@ -140,7 +140,7 @@
               <li><a href="#" class="footer__columnn-link">Наставники</a></li>
             </ul>
           </nav>
-          <nav class="footer__column__content_social">
+          <nav class="footer__column footer__column_content_social">
             <h4 class="footer__column-heading">Соцсети</h4>
             <ul class="footer__columnn-links">
               <li><a href="#" class="footer__columnn-link">
