--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a class="header__link">Узнать &rarr;</a>
         </p>
         <img class="header__main-illustration" src="./images/header-image.png" alt="Грустный мальчик">
-        <div class="header__square-pic"></div>
+        <div class="header__square-pic rotation"></div>
       </header>
       <main class="content">
         <section class="description">
@@ -31,6 +31,33 @@
               <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
             </div>
           </div>
+        </section>
+        <section class="techniques">
+          <h2 class="section-title">Цифры и факты</h2>
+          <p class="section-subtitle">Про учёбу и мозг</p>
+          <!-----------------Новая секция-------------------->
+        </section>
+        <section class="video">
+          <h2 class="section-title">Цифры и факты</h2>
+          <p class="section-subtitle">Про учёбу и мозг</p>
+          <!-----------------Новая секция-------------------->
+        </section>
+        <section class="oakley">
+          <!-----------------Новая секция-------------------->
+          <div class="two-columns">
+            <h2 class="two-columns__brief">Главные проблемы в обучении</h2>
+            <div class="two-columns__main-text">
+              <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
+              <p class="two-columns__paragraph"><span class="two-columns__span-accent">Вывод: </span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?</p>
+              <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
+            </div>
+          </div>
+        </section>
+        <section class="feynman">
+          <h2 class="feynman__title">Метод Фейнмана</h2>
+          <p class="feynman__subtitle">Выучить и не забыть.</p>
+          <a class="feynman__link">Подробнее &rarr;</a>
+          <img class="feynman__pic" src="./images/feynman.png" alt="Фейнман фото">
         </section>
         <section class="digits">
           <h2 class="section-title">Цифры и факты</h2>
@@ -72,11 +99,8 @@
             </li>
           </ul>
         </section>
-        <section class="feynman">
-            <h2 class="feynman__title">Метод Фейнмана</h2>
-            <p class="feynman__subtitle">Выучить и не забыть.</p>
-            <a class="feynman__link">Подробнее &rarr;</a>
-            <img class="feynman__pic" src="./images/feynman.png" alt="Фейнман фото">
+        <section class="khan">
+          <!-----------------Новая секция-------------------->
         </section>
         <section class="kaufman">
           <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
@@ -124,6 +148,11 @@
             </li>
           </ul>
           <div class="kaufman__triangle"></div>
+        </section>
+        <section class="resources">
+          <h2 class="section-title">Цифры и факты</h2>
+          <p class="section-subtitle">Про учёбу и мозг</p>
+          <!-----------------Новая секция-------------------->
         </section>
       </main>
       <footer class="footer">
